Incorporated the top-edge downshift of the container from commit 702b07b and added a fixed background (needs to be replaced)

--- a/site-static/style.css
+++ b/site-static/style.css
@@ -11,6 +11,10 @@
 }
 body {
     background-color: #663d80;
+    background-image: url('/static/img/bg.jpg');
+    background-repeat: repeat-x;
+    background-attachment: fixed;
+    background-position: center bottom;
     color: #ffffff;
 	font-family: sans-serif;
 }
@@ -57,7 +61,6 @@ dd {
 footer {
     clear: both;
     color: #5C2C7B;
-    margin-top: 64px;
     position: relative;
     text-align: center;
     width: 950px;
@@ -71,7 +74,7 @@ footer img:hover, footer img:active {
 header {
     background-image: url('/static/img/header.png');
     background-repeat: no-repeat;
-    margin: 0 auto;
+    margin: -116px auto 0 auto;
     position: relative;
     height: 96px;
     width: 950px;
@@ -109,8 +112,8 @@ nav a:active, nav a:hover {
 }
 #container {
     background-color: #774795;
-    margin: 32px auto;
-    padding: 32px;
+    margin: 116px auto 150px auto;
+    padding: 32px 32px 0 32px;
     position: relative;
     width: 950px;
 }
